2009-04-30  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: We need to pass the object to GetPropertyName because
	non DOB objects can have content properties now.

2009-04-30  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Don't require a content property name when we are
	trying to set a managed content property.  This could be the
	content of a managed collection.

2009-04-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mp3.cpp:
	* pipeline.h:
	* playlist.cpp:
	* pipeline.cpp:
	* pipeline-asf.cpp:
	* mms-downloader.cpp: IMediaObject: make the media field
	  private, and add thread-safe property accessors (using a
	  mutex and always returning a reffed object). Update all code
	  which accessed the old accessor to use the new accessor and
	  unref the media when done. Delete MemoryNestedSource, it's
	  not used anymore.

	* type.h:
	* value.h:
	* type-generated.cpp: Regenerated.

2009-04-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* bitmapimage.cpp: Make sure we clean up any previous
	  downloaders when we create new ones.

2009-04-29  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp:
	* uielement.cpp (DoMeasure): reorder some calls to improve speed
	until the new logic lands.

2009-04-29  Larry Ewing  <lewing@novell.com>

	* value.h (checked_get_subclass): use IsSubclassOrSuperclassOf to
	reduce Deployment::GetCurrent calls.

	* type.h:
	* type.cpp: add IsSubclassOrSuperclassOf so that we can use it it
	for value checking.

2009-04-29  Larry Ewing  <lewing@novell.com>

	* xaml.cpp:
	* dependencyobject.cpp: reuse types to reduce calls to
	Deployment::GetCurrent ().

2009-04-29  Alan McGovern  <alan.mcgovern@gmail.com>

	* popup.cpp: Forgot to call the base Dispose method.

2009-04-29  Geoff Norton  <gnorton@novell.com>

	* debug.cpp: Not everyone in the world is 32-bit intel.

2009-04-29  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (SetTextInternal): Protect everything from